--- a/stylesheet.css
+++ b/stylesheet.css
@@ -220,11 +220,7 @@ h1 {
     box-shadow: 6px 6px 10px -1px rgb(0, 0, 0),
         -6px -6px 20px -1px rgba(144, 141, 141, 0.7);
 }
-form{
-    display: flex;
-    flex-direction: column;
 
-}
 /* .ffield{
     height:50px;
     background-color:#4A9304;
@@ -319,5 +315,5 @@ input{
   width: 300px;
   height: 30px;
   border-radius: 5px;
-  
+  border: none;
 }
