--- a/stylehome.css
+++ b/stylehome.css
@@ -22,14 +22,14 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    
+    background-color: rgbA(1, 171, 35, 0.3);
     padding: 50px;
    
 
 }
 #heading{
     font-size: 56px;
-    color: rgb(120, 83, 20);
+    color: rgb(0, 0, 0);
     font-weight: normal;
 }
 #submitform{
@@ -37,9 +37,10 @@ h2{
     width: 600px;
     max-width: 70%;
     font-size: 28px;
-    background: linear-gradient(to bottom right, #663300 0%, #999966 100%);
+    background: linear-gradient(to bottom right,#E91E63 0%, #f8a1a1 100%);
     border: none;
     border-radius: 8px;
+    color: aliceblue;
 
 }
 input{
@@ -49,7 +50,7 @@ input{
 #submitform:hover{
     scale: 1.2;
     transition-duration: .4s;
-    background: linear-gradient(to top right, #996600 0%, #999966 100%);
+    background: linear-gradient(to top right, #E91E63 0%, #dd1c1c 100%);
     
 
 }
@@ -131,7 +132,7 @@ table{
     height: 100px;
     width: 100px;
     padding: 50px;
-    background-color: rgba(85, 84, 82, .2);
+    background-color: rgba(226, 222, 222, 0.2);
     border-radius: 50px;
     box-shadow: 6px 6px 10px -1px rgb(0, 0, 0),
         -6px -6px 10px -1px rgba(144, 141, 141, 0.7);
@@ -147,7 +148,7 @@ table{
     display: flex;
     align-items: center;
     justify-content: center;
-    background-color:rgba(73, 71, 71, .5);
+    background-color:rgba(198, 198, 198, 0.5);
     box-shadow: inset 4px 4px 10px -1px rgb(0, 0, 0),
         inset -4px -4px 10px -1px rgb(141, 141, 141);
 }
