--- a/stylesheet.css
+++ b/stylesheet.css
@@ -317,3 +317,17 @@ input{
   border-radius: 5px;
   border: none;
 }
+
+
+.cartlist{
+    display: flex;
+    text-align: left;
+    color: #E91E63;
+    justify-content: flex-end;
+    width: 100%;
+    border: 3px solid #E91E63;
+}
+.cartlist span{
+    padding-right: 30px;
+    padding-left: 80px;
+}
